--- a/app/src/main/res/layout/memory_card.xml
+++ b/app/src/main/res/layout/memory_card.xml
@@ -14,7 +14,7 @@
         app:cardElevation="8dp">
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/imageButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
